_old-projects/kubernetes/arrstack/prowlarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`prowlarr.minikube.m1xxos.tech`)
    kind: Rule
    services:
    - name: prowlarr
      port: 9696
  - match: Host(`prowlarr.minikube.m1xxos.tech`) && PathPrefix(`/metrics`)
    kind: Rule
    services:
    - name: prowlarr
      port: 9708
